--- a/style.css
+++ b/style.css
@@ -14842,7 +14842,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 }
 
 /* Max content widths */
-/* line 26, sass/style.scss */
+/* line 27, sass/style.scss */
 .size-auto,
 .size-full,
 .size-large,
@@ -14853,21 +14853,21 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 }
 
 /* Navbar */
-/* line 45, sass/style.scss */
+/* line 46, sass/style.scss */
 .navbar-brand {
   padding: 0;
   width: 30px;
   float: left;
 }
 
-/* line 52, sass/style.scss */
+/* line 53, sass/style.scss */
 nav .nav-link {
   font-family: Georgia, serif;
   font-weight: bold;
   font-size: 1.1rem;
 }
 
-/* line 57, sass/style.scss */
+/* line 58, sass/style.scss */
 nav .dropdown-header {
   font-family: 'Libre Baskerville', serif;
   text-align: center;
@@ -14875,49 +14875,49 @@ nav .dropdown-header {
   font-size: .9rem;
 }
 
-/* line 64, sass/style.scss */
+/* line 65, sass/style.scss */
 nav .dropdown-header:before {
   content: "\2014";
   position: relative;
   left: -1em;
 }
 
-/* line 70, sass/style.scss */
+/* line 71, sass/style.scss */
 nav .dropdown-header:after {
   content: "\2014";
   position: relative;
   left: 1em;
 }
 
-/* line 76, sass/style.scss */
+/* line 77, sass/style.scss */
 nav .dropdown-item {
   text-align: left;
   font-family: 'Libre Baskerville', serif;
   font-size: .7rem;
 }
 
-/* line 82, sass/style.scss */
+/* line 83, sass/style.scss */
 nav .dropdown-item.active {
   color: #7f7f7f;
   background-color: inherit;
 }
 
-/* line 87, sass/style.scss */
+/* line 88, sass/style.scss */
 nav .dropdown-menu a:hover {
   background-color: #828282;
 }
 
-/* line 91, sass/style.scss */
+/* line 92, sass/style.scss */
 nav .dropdown-menu a.active:hover {
   background-color: inherit;
 }
 
-/* line 95, sass/style.scss */
+/* line 96, sass/style.scss */
 nav .dropdown-menu a.menu-level-2 {
   padding-left: 3em;
 }
 
-/* line 99, sass/style.scss */
+/* line 100, sass/style.scss */
 nav .dropdown-menu a.menu-level-2:before {
   font-family: FontAwesome;
   font-weight: normal;
@@ -14929,12 +14929,12 @@ nav .dropdown-menu a.menu-level-2:before {
   left: -.2em;
 }
 
-/* line 103, sass/style.scss */
+/* line 104, sass/style.scss */
 nav .dropdown-menu a.menu-level-3 {
   padding-left: 4em;
 }
 
-/* line 107, sass/style.scss */
+/* line 108, sass/style.scss */
 nav .dropdown-menu a.menu-level-3:before {
   font-family: FontAwesome;
   font-weight: normal;
@@ -14946,12 +14946,12 @@ nav .dropdown-menu a.menu-level-3:before {
   left: -.2em;
 }
 
-/* line 111, sass/style.scss */
+/* line 112, sass/style.scss */
 nav .dropdown-menu a.menu-level-4 {
   padding-left: 5em;
 }
 
-/* line 115, sass/style.scss */
+/* line 116, sass/style.scss */
 nav .dropdown-menu a.menu-level-4:before {
   font-family: FontAwesome;
   font-weight: normal;
@@ -14963,12 +14963,12 @@ nav .dropdown-menu a.menu-level-4:before {
   left: -.2em;
 }
 
-/* line 119, sass/style.scss */
+/* line 120, sass/style.scss */
 nav .dropdown-menu a.menu-level-5 {
   padding-left: 6em;
 }
 
-/* line 123, sass/style.scss */
+/* line 124, sass/style.scss */
 nav .dropdown-menu a.menu-level-5:before {
   font-family: FontAwesome;
   font-weight: normal;
@@ -14991,13 +14991,13 @@ If you require a Site title and a logo, an example of how to do this is provided
 /*#site-container {
   background: url('../../img/background.jpg') 
 }*/
-/* line 144, sass/style.scss */
+/* line 145, sass/style.scss */
 .header-image {
   display: block;
   margin: auto;
 }
 
-/* line 149, sass/style.scss */
+/* line 150, sass/style.scss */
 #site-description {
   font-family: 'Gruppo', cursive;
   font-size: 0.8rem;
@@ -15007,12 +15007,12 @@ If you require a Site title and a logo, an example of how to do this is provided
 }
 
 /* Main content */
-/* line 159, sass/style.scss */
+/* line 160, sass/style.scss */
 #content {
   color: #aeaeae;
 }
 
-/* line 163, sass/style.scss */
+/* line 164, sass/style.scss */
 #content article {
   margin-bottom: 2rem;
   border: 1px solid white;
@@ -15020,12 +15020,12 @@ If you require a Site title and a logo, an example of how to do this is provided
   padding: .5rem;
 }
 
-/* line 169, sass/style.scss */
+/* line 170, sass/style.scss */
 #content header {
   margin: .2rem 0 .3rem 0;
 }
 
-/* line 172, sass/style.scss */
+/* line 173, sass/style.scss */
 #content section {
   margin-bottom: .7rem;
   color: #aeaeae;
@@ -15033,13 +15033,13 @@ If you require a Site title and a logo, an example of how to do this is provided
   font-size: .75rem;
 }
 
-/* line 178, sass/style.scss */
+/* line 179, sass/style.scss */
 #content footer {
   padding-bottom: 0;
   margin-bottom: 0;
 }
 
-/* line 185, sass/style.scss */
+/* line 186, sass/style.scss */
 .post_title, .post_title a, .page_title, .page_title a {
   color: #d75800;
   font-size: 1.5rem;
@@ -15047,13 +15047,13 @@ If you require a Site title and a logo, an example of how to do this is provided
   text-align: center;
 }
 
-/* line 192, sass/style.scss */
+/* line 193, sass/style.scss */
 .post_title a:hover, .page_title a:hover {
   color: #973203;
   text-decoration: none;
 }
 
-/* line 197, sass/style.scss */
+/* line 198, sass/style.scss */
 .subheading, .page_subheading {
   font-size: 1.0rem;
   color: #ab5a23;
@@ -15062,14 +15062,14 @@ If you require a Site title and a logo, an example of how to do this is provided
   text-align: center;
 }
 
-/* line 205, sass/style.scss */
+/* line 206, sass/style.scss */
 .byline {
   font-size: .8rem;
   color: #666666;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* line 217, sass/style.scss */
+/* line 218, sass/style.scss */
 .category_title {
   font-family: 'Cinzel Decorative', cursive;
   font-size: 1.7rem;
@@ -15077,14 +15077,14 @@ If you require a Site title and a logo, an example of how to do this is provided
   text-align: center;
 }
 
-/* line 224, sass/style.scss */
+/* line 225, sass/style.scss */
 .related_content {
   margin-top: 1rem;
   padding-top: 1rem;
   border-top: 1px solid white;
 }
 
-/* line 230, sass/style.scss */
+/* line 231, sass/style.scss */
 .related_content h3 {
   color: #d75800;
   font-size: 1.1rem;
@@ -15092,13 +15092,13 @@ If you require a Site title and a logo, an example of how to do this is provided
   text-align: center;
 }
 
-/* line 237, sass/style.scss */
+/* line 238, sass/style.scss */
 .related_content ul {
   list-style: none;
 }
 
 /* Sidebar */
-/* line 259, sass/style.scss */
+/* line 260, sass/style.scss */
 .sidebar section {
   padding: .5rem 0rem 0rem 0rem;
   border: 1px solid #747474;
@@ -15106,7 +15106,7 @@ If you require a Site title and a logo, an example of how to do this is provided
   margin-bottom: 2rem;
 }
 
-/* line 266, sass/style.scss */
+/* line 267, sass/style.scss */
 .sidebar ul,
 .sidebar ol {
   list-style-type: none;
@@ -15115,7 +15115,7 @@ If you require a Site title and a logo, an example of how to do this is provided
   margin: 0;
 }
 
-/* line 273, sass/style.scss */
+/* line 274, sass/style.scss */
 .sidebar li {
   margin: 0;
   padding: 0;
@@ -15123,7 +15123,7 @@ If you require a Site title and a logo, an example of how to do this is provided
   font-size: 0.6rem;
 }
 
-/* line 280, sass/style.scss */
+/* line 281, sass/style.scss */
 .sidebar li a {
   display: inline-block;
   padding: .2em 0 .5em .5em;
@@ -15131,39 +15131,39 @@ If you require a Site title and a logo, an example of how to do this is provided
   width: 100%;
 }
 
-/* line 287, sass/style.scss */
+/* line 288, sass/style.scss */
 .sidebar li li a {
   padding-left: 1.5em;
 }
 
-/* line 291, sass/style.scss */
+/* line 292, sass/style.scss */
 .sidebar li li li a {
   padding-left: 2.5em;
 }
 
-/* line 295, sass/style.scss */
+/* line 296, sass/style.scss */
 .sidebar li li li li a {
   padding-left: 3.5em;
 }
 
-/* line 299, sass/style.scss */
+/* line 300, sass/style.scss */
 .sidebar li a:hover {
   background-color: #bebebe;
 }
 
-/* line 303, sass/style.scss */
+/* line 304, sass/style.scss */
 .widget_links li {
   border: 1px solid #747474;
   padding: 0;
   margin: 0;
 }
 
-/* line 309, sass/style.scss */
+/* line 310, sass/style.scss */
 .widget_links li a:hover {
   background-color: #bebebe !important;
 }
 
-/* line 317, sass/style.scss */
+/* line 318, sass/style.scss */
 li.faviroll a.faviroll {
   padding: 0.125rem 0 0.125rem calc(1.2em + 16px) !important;
   position: relative;
@@ -15172,7 +15172,7 @@ li.faviroll a.faviroll {
 }
 
 /* You may here anhanced style the blogroll-links */
-/* line 329, sass/style.scss */
+/* line 330, sass/style.scss */
 .sidebar h4 {
   padding-bottom: .5rem;
   margin: 0;
@@ -15184,14 +15184,14 @@ li.faviroll a.faviroll {
 }
 
 /* general styling */
-/* line 341, sass/style.scss */
+/* line 342, sass/style.scss */
 code {
   color: inherit;
   font-family: Monaco, 'Inconsolata', monospace;
   background: inherit;
 }
 
-/* line 347, sass/style.scss */
+/* line 348, sass/style.scss */
 pre {
   color: inherit;
   font-family: Monaco, 'Inconsolata', monospace !important;
@@ -15199,7 +15199,7 @@ pre {
   overflow-x: auto;
 }
 
-/* line 359, sass/style.scss */
+/* line 360, sass/style.scss */
 article blockquote {
   font-family: Verdana, Geneva, sans-serif;
   margin: 1rem .5rem 1rem .5rem;
@@ -15209,12 +15209,12 @@ article blockquote {
   quotes: "“" "”" "‘" "’";
 }
 
-/* line 368, sass/style.scss */
+/* line 369, sass/style.scss */
 article blockquote p {
   display: inline;
 }
 
-/* line 372, sass/style.scss */
+/* line 373, sass/style.scss */
 article blockquote:before {
   font-family: Georgia, serif;
   content: open-quote;
@@ -15224,7 +15224,7 @@ article blockquote:before {
   vertical-align: -.6rem;
 }
 
-/* line 381, sass/style.scss */
+/* line 382, sass/style.scss */
 article blockquote:after {
   font-family: Georgia, serif;
   content: close-quote;
@@ -15235,19 +15235,19 @@ article blockquote:after {
   padding: 0;
 }
 
-/* line 391, sass/style.scss */
+/* line 392, sass/style.scss */
 article section a:visited {
   color: #6d4195;
 }
 
-/* line 395, sass/style.scss */
+/* line 396, sass/style.scss */
 article h1, article h2, article h3, article h4, article h5, article h6 {
   color: #d75800;
   font-family: 'Libre Baskerville', serif;
   text-align: center;
 }
 
-/* line 401, sass/style.scss */
+/* line 402, sass/style.scss */
 article section h1:after, article section h2:after, article section h3:after, article section h4:after, article section h5:after, article section h6:after {
   content: ' ';
   display: block;
@@ -15259,42 +15259,42 @@ article section h1:after, article section h2:after, article section h3:after, ar
   top: 3px;
 }
 
-/* line 418, sass/style.scss */
+/* line 419, sass/style.scss */
 article h1 {
   font-size: 1.5rem;
 }
 
-/* line 422, sass/style.scss */
+/* line 423, sass/style.scss */
 article h2 {
   font-size: 1.3rem;
 }
 
-/* line 426, sass/style.scss */
+/* line 427, sass/style.scss */
 article h3 {
   font-size: 1.1rem;
 }
 
-/* line 430, sass/style.scss */
+/* line 431, sass/style.scss */
 article h4 {
   font-size: 1rem;
 }
 
-/* line 434, sass/style.scss */
+/* line 435, sass/style.scss */
 article h5 {
   font-size: .9rem;
 }
 
-/* line 438, sass/style.scss */
+/* line 439, sass/style.scss */
 article h6 {
   font-size: .8rem;
 }
 
-/* line 450, sass/style.scss */
+/* line 451, sass/style.scss */
 abbr, acronym {
   border-bottom: .1em dotted;
 }
 
-/* line 454, sass/style.scss */
+/* line 455, sass/style.scss */
 .abt-bibliography__heading {
   color: #d75800;
   font-size: 1.5rem;
@@ -15304,42 +15304,129 @@ abbr, acronym {
 
 /* Hide form placeholders on focus */
 /* Comments */
-/* line 472, sass/style.scss */
+/* line 473, sass/style.scss */
 #disqus_thread {
   color: #aeaeae;
   background-color: #1f1f1f;
   padding: .5rem;
 }
 
-/* line 478, sass/style.scss */
+/* line 479, sass/style.scss */
 #disqus_thread p {
   color: #aeaeae;
 }
 
-/* Site footer */
+/* line 482, sass/style.scss */
+#respond {
+  margin-top: 40px;
+}
+
+/* line 486, sass/style.scss */
+#comments {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+/* line 491, sass/style.scss */
+#comments .comment-title {
+  font-family: 'Libre Baskerville', serif;
+  text-align: center;
+  font-weight: bold;
+  font-size: .9rem;
+}
+/* line 498, sass/style.scss */
+#comments .comment-list {
+  padding: 0;
+  margin: 0;
+}
+/* line 503, sass/style.scss */
+#comments ul.comment-list, #comments ol.comment-list {
+  counter-reset: li;
+  /* Initiate a counter */
+  list-style: none;
+}
+
+/* line 510, sass/style.scss */
+.comment-header, .comment-footer {
+  padding-top: 0.2rem;
+  padding-right: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.2rem;
+  margin-bottom: 0px;
+  background-color: #3e3e3e;
+}
+
+/* line 519, sass/style.scss */
+.comment-header {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgba(255, 255, 255, 0.2);
+}
+/* line 524, sass/style.scss */
+.comment-header .comment-metadata {
+  font-size: .5rem;
+  margin: 0;
+  padding: 0;
+}
+/* line 530, sass/style.scss */
+.comment-header address {
+  display: inline;
+}
+/* line 534, sass/style.scss */
+.comment-header .in-reply-to-re {
+  padding: 0 0 0 1em;
+  margin: 0;
+  line-height: .7rem;
+}
 /* line 539, sass/style.scss */
+.comment-header .in-reply-to-re a {
+  padding: 0;
+  margin: 0;
+}
+
+/* line 547, sass/style.scss */
+.comment-footer {
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: rgba(255, 255, 255, 0.2);
+  text-align: right;
+  font-family: Arial,Tahoma,Helvetica,FreeSans,sans-serif;
+  font-size: 0.75rem;
+}
+/* line 555, sass/style.scss */
+.comment-footer a {
+  padding: 0 .5em 0 0;
+  margin: 0;
+}
+
+/* line 562, sass/style.scss */
+.comment-content {
+  padding: 1.25rem;
+}
+
+/* Site footer */
+/* line 622, sass/style.scss */
 .site-footer {
   padding: 40px 0;
 }
 
-/* line 542, sass/style.scss */
-.site-footer ul,
-.site-footer ol {
+/* line 625, sass/style.scss */
+.site-footer ul {
   list-style-type: none;
   padding: 0;
 }
 
-/* line 547, sass/style.scss */
+/* line 629, sass/style.scss */
 .site-footer li {
   margin: 10px 0;
 }
 
-/* line 550, sass/style.scss */
+/* line 632, sass/style.scss */
 .site-sub-footer p {
   text-align: center;
 }
 
-/* line 554, sass/style.scss */
+/* line 636, sass/style.scss */
 .site-footer p {
   text-align: center;
 }
