--- a/sass/style.scss
+++ b/sass/style.scss
@@ -215,7 +215,7 @@ If you require a Site title and a logo, an example of how to do this is provided
 .datetime {
 }
 
-.category_title {
+.category_title, .search_title, .page-header h1 {
 	font-family: 'Cinzel Decorative', cursive;
 	font-size: 1.7rem;
 	color: #aeaeae;
@@ -413,6 +413,11 @@ article section h1:after, article section h2:after, article section h3:after, ar
 	// -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
 	position: relative;
 	top: 3px;
+}
+
+article strong {
+	color: #dcdcdc;
+	font-weith: 700;
 }
 
 
